Firebase Deployment and Squashed Bugs

--- a/public/index.css
+++ b/public/index.css
@@ -28,7 +28,7 @@
   }
 
   #board {
-    background-image: url("./res/background.jpg");
+    background-image: url("../res/background.jpg");
     width: 800px;
     height: 600px;
   }
@@ -39,17 +39,17 @@
     position: absolute;
     margin-left: -25px;
     margin-top: -16px;
-    background-image: url("./res/HeroineDefault.png");
+    background-image: url("../res/HeroineDefault.png");
     background-size: 100% 100%;
     z-index: -1;
   }
 
-  .moveLeft {
-    background-image: url("./res/HeroineLT.jpg");
+  .bankleft {
+    background-image: url("../res/HeroineLT.jpg");
   }
 
-  .moveRight {
-    background-image: url("./res/HeroineRT.jpg");
+  .bankright {
+    background-image: url("../res/HeroineRT.jpg");
   }
 
   .rock {
@@ -58,28 +58,28 @@
     position: absolute;
     margin-left: -25px;
     margin-top: -25px;
-    background-image: url("./res/rock1.png");
+    background-image: url("../res/rock1.png");
     background-size: 100% 100%;
   }
 
-  .heroine-beam {
+  .player-laser {
     height: 35px;
     width: 5px;
     position: absolute;
     margin-top: -17.5px;
     margin-left: -2.5px;
-    background-image: url("./res/player-laser.png");
+    background-image: url("../res/player-laser.png");
     background-size: 100% 100%;
 
   }
 
-  .saber-beam {
+  .enemy-laser {
     height: 35px;
     width: 5px;
     position: absolute;
     margin-top: -7.5px;
     margin-left: -2.5px;
-    background-image: url("./res/enemy-laser.png");
+    background-image: url("../res/enemy-laser.png");
     background-size: 100% 100%;
 
   }
@@ -88,7 +88,7 @@
     position: absolute;
     margin-top: -10px;
     margin-left: -10px;
-    background: url('./res/Invaders.png') no-repeat -9px -18px;
+    background: url('../res/Invaders.png') no-repeat -9px -18px;
     width: 5px;
     height: 8px;
 	background-size: 100% 100%;
@@ -98,7 +98,7 @@
     position: absolute;
     margin-top: -10px;
     margin-left: -10px;
-    background: url('./res/Invaders.png') no-repeat 0 -19px;
+    background: url('../res/Invaders.png') no-repeat 0 -19px;
     width: 5px;
     height: 7px;
 	  background-size: 100% 100%;
@@ -108,10 +108,10 @@
     position: absolute;
     margin-top: -10px;
     margin-left: -10px;
-    background: url('./res/Invaders.png') no-repeat -18px -18px;
+    background: url('../res/Invaders.png') no-repeat -18px -18px;
     width: 5px;
     height: 8px;
-	  background-size: 100% 100%;
+	background-size: 100% 100%;
   }
 
   #ufo-bonus {
